# ROS-2-for-Beginners-ROS2_Jazzy_2025

./: README.md
dev_ws_cpp/src/my_cpp_pkg/: CMakeLists.txt  package.xml
dev_ws_cpp/src/my_cpp_pkg/src/: my_first_node.cpp  robot_news_station.cpp  smartphone.cpp
dev_ws_cpp/src/my_py_pkg/: package.xml  setup.py
dev_ws_cpp/src/my_py_pkg/my_py_pkg/: my_first_node.py  robot_news_station.py  smartphone.py
